# Chillie

./: .gitignore  BUILDATHON_SUMMARY.md  PAYMENT_SYSTEM_COMPLETE.md  README-CLI-INTEGRATION.md  README.md  backend-package.json  backend-server.js  cli-setup.sh  package-lock.json  package.json  run.bash
buildathon-template/: run.bash
chillie-contracts/: CHILLIE_DEPLOYMENT_STATUS.md  README.md  deploy-chillie.sh
chillie-contracts/payment-processor/: Cargo.toml  README.md
chillie-contracts/payment-processor/src/: contract.rs  lib.rs  service.rs  simulation.rs  state.rs
chillie-contracts/room-manager/: Cargo.toml  README.md
chillie-contracts/room-manager/src/: contract.rs  lib.rs  service.rs  state.rs
chillie-contracts/room-manager/tests/: contract_tests.rs
chillie-node/: Cargo.toml
chillie-node/src/: main.rs  shelby.rs  signaling.rs  walrus.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/blockchain/: WalletConnector.tsx
frontend/src/components/competition/: VotingPanel.tsx
frontend/src/components/navigation/: MainNavigation.tsx
frontend/src/components/payment/: EnhancedDepositModal.tsx  EnhancedInstantTipButton.tsx  EnhancedVirtualBalanceDisplay.tsx  PaymentNotifications.tsx  PaymentSettingsPanel.tsx  QualitySelector.tsx  RevenueDashboard.tsx  TippingPanel.tsx  WalletBalance.tsx  index.ts
frontend/src/components/room/: ChatPanel.tsx  ControlBar.tsx  VideoGrid.tsx
frontend/src/components/rooms/: RoomCreator.tsx
frontend/src/components/staking/: StakingCalculator.tsx  StakingDashboard.tsx
frontend/src/hooks/: useBlockchain.ts  usePeerConnection.ts
frontend/src/lib/: apollo-client.ts  cli-backend-integration.ts  linera-blockchain.ts  local-chain-integration.ts  mock-blockchain.ts
frontend/src/pages/: EnhancedRoom.tsx  Index.tsx  PaymentDashboard.tsx  PrivateMeetings.tsx  PublicStreaming.tsx  Room.tsx  StakingPage.tsx
frontend/src/test/: setup.ts
frontend/src/types/: ethereum.d.ts  graphql.ts  tweetnacl.d.ts
local-chain/: start-local-chain.sh
(+10 files in other folders)
