[package]
name = "chillie-node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.20"
futures = "0.3"
tokio-stream = "0.1"
linera-sdk = { path = "../linera-protocol/linera-sdk" } # Align with contracts
chillie = { path = "../chillie-contracts/room-manager" } # Link to contract types
